feat: adding more functions on OrderController
OBS: configuring endpoints in documentation Swagger
