# src/routers/OrderRouter.ts
@@ -26,7 +26,16 @@ router.post("/", async (req: Request, res: Response, next: NextFunction) => {
   try {
     orderController.addOrder(req, res, next);
   } catch (error) {
-    next(error)
+    console.error("Erro na consulta ao banco de dados:", error);
+    res.status(500).send("Erro interno do servidor");
+  }
+});
+router.delete("/:idPedido", async (req: Request, res: Response, next: NextFunction) => {
+  try {
+    orderController.deleteOrder(req, res, next);
+  } catch (error) {
+    console.error("Erro na consulta ao banco de dados:", error);
+    res.status(500).send("Erro interno do servidor");
   }
 });
 export default router;
